--- a/doc/tex/appx-instr_syntax.tex
+++ b/doc/tex/appx-instr_syntax.tex
@@ -4,19 +4,19 @@
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                             
-\multirow{12}{*}{1}   & \XCRYPTOSYNTAXUSE{xc.ldr.bu}    & \REFSEC{sec:spec:instruction:xc.ldr.bu}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.b}     & \REFSEC{sec:spec:instruction:xc.ldr.b}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.hu}    & \REFSEC{sec:spec:instruction:xc.ldr.hu}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.h}     & \REFSEC{sec:spec:instruction:xc.ldr.h}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.w}     & \REFSEC{sec:spec:instruction:xc.ldr.w}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.wu}    & \REFSEC{sec:spec:instruction:xc.ldr.wu}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.ldr.d}     & \REFSEC{sec:spec:instruction:xc.ldr.d}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.str.b}     & \REFSEC{sec:spec:instruction:xc.str.b}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.str.h}     & \REFSEC{sec:spec:instruction:xc.str.h}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.str.w}     & \REFSEC{sec:spec:instruction:xc.str.w}     \\
-                      & \XCRYPTOSYNTAXUSE{xc.str.d}     & \REFSEC{sec:spec:instruction:xc.str.d}     \\
+Class                 & Syntax                              & Section                                        \\
+\hline\hline                                                                                 
+\multirow{12}{*}{1}   & \XCRYPTOSYNTAXUSE{xc.ldr.bu}        & \REFSEC{sec:spec:instruction:xc.ldr.bu}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.ldr.b}         & \REFSEC{sec:spec:instruction:xc.ldr.b}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.ldr.hu}        & \REFSEC{sec:spec:instruction:xc.ldr.hu}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.ldr.h}         & \REFSEC{sec:spec:instruction:xc.ldr.h}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.ldr.w}         & \REFSEC{sec:spec:instruction:xc.ldr.w}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.ldr.wu}        & \REFSEC{sec:spec:instruction:xc.ldr.wu}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.ldr.d}         & \REFSEC{sec:spec:instruction:xc.ldr.d}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.str.b}         & \REFSEC{sec:spec:instruction:xc.str.b}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.str.h}         & \REFSEC{sec:spec:instruction:xc.str.h}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.str.w}         & \REFSEC{sec:spec:instruction:xc.str.w}         \\
+                      & \XCRYPTOSYNTAXUSE{xc.str.d}         & \REFSEC{sec:spec:instruction:xc.str.d}         \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -30,11 +30,11 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                             
-\multirow{ 3}{*}{2.1} & \XCRYPTOSYNTAXUSE{xc.rngtest}   & \REFSEC{sec:spec:instruction:xc.rngtest}   \\
-                      & \XCRYPTOSYNTAXUSE{xc.rngseed}   & \REFSEC{sec:spec:instruction:xc.rngseed}   \\
-                      & \XCRYPTOSYNTAXUSE{xc.rngsamp}   & \REFSEC{sec:spec:instruction:xc.rngsamp}   \\
+Class                 & Syntax                              & Section                                        \\
+\hline\hline                                                                                 
+\multirow{ 3}{*}{2.1} & \XCRYPTOSYNTAXUSE{xc.rngtest}       & \REFSEC{sec:spec:instruction:xc.rngtest}       \\
+                      & \XCRYPTOSYNTAXUSE{xc.rngseed}       & \REFSEC{sec:spec:instruction:xc.rngseed}       \\
+                      & \XCRYPTOSYNTAXUSE{xc.rngsamp}       & \REFSEC{sec:spec:instruction:xc.rngsamp}       \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -48,12 +48,12 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                             
-\multirow{ 4}{*}{2.2} & \XCRYPTOSYNTAXUSE{xc.scatter.b} & \REFSEC{sec:spec:instruction:xc.scatter.b} \\
-                      & \XCRYPTOSYNTAXUSE{xc.scatter.h} & \REFSEC{sec:spec:instruction:xc.scatter.h} \\
-                      & \XCRYPTOSYNTAXUSE{xc.gather.b}  & \REFSEC{sec:spec:instruction:xc.gather.b}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.gather.h}  & \REFSEC{sec:spec:instruction:xc.gather.h}  \\
+Class                 & Syntax                              & Section                                        \\
+\hline\hline                                                                                 
+\multirow{ 4}{*}{2.2} & \XCRYPTOSYNTAXUSE{xc.scatter.b}     & \REFSEC{sec:spec:instruction:xc.scatter.b}     \\
+                      & \XCRYPTOSYNTAXUSE{xc.scatter.h}     & \REFSEC{sec:spec:instruction:xc.scatter.h}     \\
+                      & \XCRYPTOSYNTAXUSE{xc.gather.b}      & \REFSEC{sec:spec:instruction:xc.gather.b}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.gather.h}      & \REFSEC{sec:spec:instruction:xc.gather.h}      \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -67,14 +67,10 @@ Class                 & Syntax                          & Section               
 \begin{center} 
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
+Class                 & Syntax                              & Section                                        \\
 \hline\hline                                                                             
-\multirow{ 6}{*}{2.3} & \XCRYPTOSYNTAXUSE{xc.bop}       & \REFSEC{sec:spec:instruction:xc.bop}       \\
-                      & \XCRYPTOSYNTAXUSE{xc.lut}       & \REFSEC{sec:spec:instruction:xc.lut}       \\
-                      & \XCRYPTOSYNTAXUSE{xc.xsll.i}    & \REFSEC{sec:spec:instruction:xc.xsll.i}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.xsrl.i}    & \REFSEC{sec:spec:instruction:xc.xsrl.i}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.xrol.i}    & \REFSEC{sec:spec:instruction:xc.xrol.i}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.xror.i}    & \REFSEC{sec:spec:instruction:xc.xror.i}    \\
+\multirow{ 2}{*}{2.3} & \XCRYPTOSYNTAXUSE{xc.bop}           & \REFSEC{sec:spec:instruction:xc.bop}           \\
+                      & \XCRYPTOSYNTAXUSE{xc.lut}           & \REFSEC{sec:spec:instruction:xc.lut}           \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -88,20 +84,20 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                             
-\multirow{12}{*}{2.4} & \XCRYPTOSYNTAXUSE{xc.padd}      & \REFSEC{sec:spec:instruction:xc.padd}      \\
-                      & \XCRYPTOSYNTAXUSE{xc.psub}      & \REFSEC{sec:spec:instruction:xc.psub}      \\
-                      & \XCRYPTOSYNTAXUSE{xc.pmul.l}    & \REFSEC{sec:spec:instruction:xc.pmul.l}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.pmul.h}    & \REFSEC{sec:spec:instruction:xc.pmul.h}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.pclmul.l}  & \REFSEC{sec:spec:instruction:xc.pclmul.l}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.pclmul.h}  & \REFSEC{sec:spec:instruction:xc.pclmul.h}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.psll}      & \REFSEC{sec:spec:instruction:xc.psll}      \\
-                      & \XCRYPTOSYNTAXUSE{xc.psll.i}    & \REFSEC{sec:spec:instruction:xc.psll.i}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.psrl}      & \REFSEC{sec:spec:instruction:xc.psrl}      \\
-                      & \XCRYPTOSYNTAXUSE{xc.psrl.i}    & \REFSEC{sec:spec:instruction:xc.psrl.i}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.pror}      & \REFSEC{sec:spec:instruction:xc.pror}      \\
-                      & \XCRYPTOSYNTAXUSE{xc.pror.i}    & \REFSEC{sec:spec:instruction:xc.pror.i}    \\
+Class                 & Syntax                              & Section                                        \\
+\hline\hline                                                                                 
+\multirow{12}{*}{2.4} & \XCRYPTOSYNTAXUSE{xc.padd}          & \REFSEC{sec:spec:instruction:xc.padd}          \\
+                      & \XCRYPTOSYNTAXUSE{xc.psub}          & \REFSEC{sec:spec:instruction:xc.psub}          \\
+                      & \XCRYPTOSYNTAXUSE{xc.pmul.l}        & \REFSEC{sec:spec:instruction:xc.pmul.l}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.pmul.h}        & \REFSEC{sec:spec:instruction:xc.pmul.h}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.pclmul.l}      & \REFSEC{sec:spec:instruction:xc.pclmul.l}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.pclmul.h}      & \REFSEC{sec:spec:instruction:xc.pclmul.h}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.psll}          & \REFSEC{sec:spec:instruction:xc.psll}          \\
+                      & \XCRYPTOSYNTAXUSE{xc.psll.i}        & \REFSEC{sec:spec:instruction:xc.psll.i}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.psrl}          & \REFSEC{sec:spec:instruction:xc.psrl}          \\
+                      & \XCRYPTOSYNTAXUSE{xc.psrl.i}        & \REFSEC{sec:spec:instruction:xc.psrl.i}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.pror}          & \REFSEC{sec:spec:instruction:xc.pror}          \\
+                      & \XCRYPTOSYNTAXUSE{xc.pror.i}        & \REFSEC{sec:spec:instruction:xc.pror.i}        \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -115,13 +111,13 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
+Class                 & Syntax                              & Section                                        \\
 \hline\hline                                                                         
-\multirow{ 5}{*}{2.5} & \XCRYPTOSYNTAXUSE{xc.madd.3}    & \REFSEC{sec:spec:instruction:xc.madd.3}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.msub.3}    & \REFSEC{sec:spec:instruction:xc.msub.3}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.macc.1}    & \REFSEC{sec:spec:instruction:xc.macc.1}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.mmul.3}    & \REFSEC{sec:spec:instruction:xc.mmul.3}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.mror}      & \REFSEC{sec:spec:instruction:xc.mror}      \\
+\multirow{ 5}{*}{2.5} & \XCRYPTOSYNTAXUSE{xc.madd.3}        & \REFSEC{sec:spec:instruction:xc.madd.3}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.msub.3}        & \REFSEC{sec:spec:instruction:xc.msub.3}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.macc.1}        & \REFSEC{sec:spec:instruction:xc.macc.1}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.mmul.3}        & \REFSEC{sec:spec:instruction:xc.mmul.3}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.mror}          & \REFSEC{sec:spec:instruction:xc.mror}          \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -135,9 +131,9 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
+Class                 & Syntax                              & Section                                        \\
 \hline\hline                                                                         
-\multirow{ 1}{*}{2.6} & \XCRYPTOSYNTAXUSE{xc.fenl}      & \REFSEC{sec:spec:instruction:xc.fenl}      \\
+\multirow{ 1}{*}{2.6} & \XCRYPTOSYNTAXUSE{xc.fenl}          & \REFSEC{sec:spec:instruction:xc.fenl}          \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -151,9 +147,30 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
+Class                 & Syntax                              & Section                                        \\
 \hline\hline                                                                         
-% TODO
+\multirow{22}{*}{2.6} & \XCRYPTOSYNTAXUSE{xc.mask.b2a}      & \REFSEC{sec:spec:instruction:xc.mask.b2a}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.a2b}      & \REFSEC{sec:spec:instruction:xc.mask.a2b}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.mask}   & \REFSEC{sec:spec:instruction:xc.mask.b.mask}   \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.unmask} & \REFSEC{sec:spec:instruction:xc.mask.b.unmask} \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.remask} & \REFSEC{sec:spec:instruction:xc.mask.b.remask} \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.not}    & \REFSEC{sec:spec:instruction:xc.mask.b.not}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.and}    & \REFSEC{sec:spec:instruction:xc.mask.b.and}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.ior}    & \REFSEC{sec:spec:instruction:xc.mask.b.ior}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.xor}    & \REFSEC{sec:spec:instruction:xc.mask.b.xor}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.add}    & \REFSEC{sec:spec:instruction:xc.mask.b.add}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.sub}    & \REFSEC{sec:spec:instruction:xc.mask.b.sub}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.slli}   & \REFSEC{sec:spec:instruction:xc.mask.b.slli}   \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.srli}   & \REFSEC{sec:spec:instruction:xc.mask.b.srli}   \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.b.rori}   & \REFSEC{sec:spec:instruction:xc.mask.b.rori}   \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.a.mask}   & \REFSEC{sec:spec:instruction:xc.mask.a.mask}   \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.a.unmask} & \REFSEC{sec:spec:instruction:xc.mask.a.unmask} \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.a.remask} & \REFSEC{sec:spec:instruction:xc.mask.a.remask} \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.a.add}    & \REFSEC{sec:spec:instruction:xc.mask.a.add}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.a.sub}    & \REFSEC{sec:spec:instruction:xc.mask.a.sub}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.f.sqr}    & \REFSEC{sec:spec:instruction:xc.mask.f.sqr}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.f.mul}    & \REFSEC{sec:spec:instruction:xc.mask.f.mul}    \\
+                      & \XCRYPTOSYNTAXUSE{xc.mask.f.aff}    & \REFSEC{sec:spec:instruction:xc.mask.f.aff}    \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -167,10 +184,10 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                         
-\multirow{ 2}{*}{3.1} & \XCRYPTOSYNTAXUSE{xc.aessub}    & \REFSEC{sec:spec:instruction:xc.aessub}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.aesmix}    & \REFSEC{sec:spec:instruction:xc.aesmix}    \\
+Class                 & Syntax                              & Section                                        \\
+\hline\hline                                                                            
+\multirow{ 2}{*}{3.1} & \XCRYPTOSYNTAXUSE{xc.aessub}        & \REFSEC{sec:spec:instruction:xc.aessub}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.aesmix}        & \REFSEC{sec:spec:instruction:xc.aesmix}        \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -184,10 +201,10 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                         
-\multirow{ 2}{*}{3.2} & \XCRYPTOSYNTAXUSE{xc.sha256}    & \REFSEC{sec:spec:instruction:xc.sha256}    \\
-                      & \XCRYPTOSYNTAXUSE{xc.sha512}    & \REFSEC{sec:spec:instruction:xc.sha512}    \\
+Class                 & Syntax                              & Section                                        \\
+\hline\hline                                                                             
+\multirow{ 2}{*}{3.2} & \XCRYPTOSYNTAXUSE{xc.sha256}        & \REFSEC{sec:spec:instruction:xc.sha256}        \\
+                      & \XCRYPTOSYNTAXUSE{xc.sha512}        & \REFSEC{sec:spec:instruction:xc.sha512}        \\
 \hline                                                                             
 \end{tabular}
 \end{center}
@@ -201,66 +218,18 @@ Class                 & Syntax                          & Section               
 \begin{center}
 \begin{tabular}{|c|l|l|}
 \hline                                                                             
-Class                 & Syntax                           & Section                                   \\
+Class                 & Syntax                               & Section                                       \\
 \hline\hline                                                                         
-\multirow{ 5}{*}{3.3} & \XCRYPTOSYNTAXUSE{xc.sha3.xy}    & \REFSEC{sec:spec:instruction:xc.sha3.xy}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.sha3.x1}    & \REFSEC{sec:spec:instruction:xc.sha3.x1}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.sha3.x2}    & \REFSEC{sec:spec:instruction:xc.sha3.x2}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.sha3.x4}    & \REFSEC{sec:spec:instruction:xc.sha3.x4}  \\
-                      & \XCRYPTOSYNTAXUSE{xc.sha3.yx}    & \REFSEC{sec:spec:instruction:xc.sha3.yx}  \\
+\multirow{ 5}{*}{3.3} & \XCRYPTOSYNTAXUSE{xc.sha3.xy}        & \REFSEC{sec:spec:instruction:xc.sha3.xy}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.sha3.x1}        & \REFSEC{sec:spec:instruction:xc.sha3.x1}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.sha3.x2}        & \REFSEC{sec:spec:instruction:xc.sha3.x2}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.sha3.x4}        & \REFSEC{sec:spec:instruction:xc.sha3.x4}      \\
+                      & \XCRYPTOSYNTAXUSE{xc.sha3.yx}        & \REFSEC{sec:spec:instruction:xc.sha3.yx}      \\
 \hline                                                                             
 \end{tabular}
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $3.3$, per \REFSEC{sec:spec:instruction:3:3}.}
 \label{tab:instr_syntax:3:3}
-\end{table}                                                                      
-
-% =============================================================================
-
-\begin{table}[!ht]
-\begin{center}
-\begin{tabular}{|c|l|l|}
-\hline                                                                             
-Class                 & Syntax                           & Section                                   \\
-\hline\hline                                                                         
-\multirow{ 1}{*}{3.4} & \XCRYPTOSYNTAXUSE{xc.sm4sub}     & \REFSEC{sec:spec:instruction:xc.sm4sub}   \\
-\hline                                                                             
-\end{tabular}
-\end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $3.4$, per \REFSEC{sec:spec:instruction:3:4}.}
-\label{tab:instr_syntax:3:4}
-\end{table}                                                                      
-
-% =============================================================================
-
-\begin{table}[!ht]
-\begin{center}
-\begin{tabular}{|c|l|l|}
-\hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                         
-% TODO
-\hline                                                                             
-\end{tabular}
-\end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $3.5$, per \REFSEC{sec:spec:instruction:3:5}.}
-\label{tab:instr_syntax:3:5}
-\end{table}                                                                      
-
-% =============================================================================
-
-\begin{table}[!ht]
-\begin{center}
-\begin{tabular}{|c|l|l|}
-\hline                                                                             
-Class                 & Syntax                          & Section                                    \\
-\hline\hline                                                                         
-% TODO
-\hline                                                                             
-\end{tabular}
-\end{center}
-\caption{An overview of instruction syntax, including reference to associated semantics: class $3.6$, per \REFSEC{sec:spec:instruction:3:6}.}
-\label{tab:instr_syntax:3:6}
 \end{table}                                                                      
 
 % =============================================================================
